--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/images/favicon-16x16.png" />
+    <link rel="icon" type="image/png" href="/images/daisyfavicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Daisy's Journey | Hospital Volunteer Program</title>
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
